*0.13.1* (11 July, 2005)

* Fixed that each request with the WEBrick adapter would open a new database connection #1685 [Sam Stephenson]

* Added support for SQL Server in the database rake tasks #1652 [ken.barker@gmail.com] Note: osql and scptxfr may need to be installed on your development environment. This involves getting the .exes and a .rll (scptxfr) from a production SQL Server (not developer level SQL Server). Add their location to your Environment PATH and you are all set.

* Added a VERSION parameter to the migrate task that allows you to do "rake migrate VERSION=34" to migrate to the 34th version traveling up or down depending on the current version

* Extend Ruby version check to include RUBY_RELEASE_DATE >= '2005-12-25', the final Ruby 1.8.2 release #1674 [court3nay@gmail.com]

* Improved documentation for environment config files #1625 [court3nay@gmail.com]


*0.13.0* (6 July, 2005)

* Changed the default logging level in config/environment.rb to INFO for production (so SQL statements won't be logged)

* Added migration generator: ./script/generate migration add_system_settings

* Added "migrate" as rake task to execute all the pending migrations from db/migrate

* Fixed that model generator would make fixtures plural, even if ActiveRecord::Base.pluralize_table_names was false #1185 [Marcel Molina]

* Added a DOCTYPE of HTML transitional to the HTML files generated by Rails #1124 [Michael Koziarski]

* SIGTERM also gracefully exits dispatch.fcgi.  Ignore SIGUSR1 on Windows.

* Add the option to manually manage garbage collection in the FastCGI dispatcher.  Set the number of requests between GC runs in your public/dispatch.fcgi [skaes@web.de]

* Allow dynamic application reloading for dispatch.fcgi processes by sending a SIGHUP. If the process is currently handling a request, the request will be allowed to complete first. This allows production fcgi's to be reloaded without having to restart them.
