@@ -19,6 +19,16 @@ RUBY_FORGE_PROJECT = "rails"
 RUBY_FORGE_USER    = "webster132"
 
 
+desc "Default Task"
+task :default => :test
+
+Rake::TestTask.new do |t|
+  t.libs << 'test'
+  t.pattern = 'test/*_test.rb'
+  t.verbose = true
+end
+
+
 BASE_DIRS   = %w( app config/environments components db doc log lib public script test vendor )
 APP_DIRS    = %w( apis models controllers helpers views views/layouts )
 PUBLIC_DIRS = %w( images javascripts stylesheets )
@@ -30,9 +40,6 @@ BIN_FILES    = %w( generate destroy breakpointer console server update runner pr
 
 VENDOR_LIBS = %w( actionpack activerecord actionmailer activesupport actionwebservice railties )
 
-
-desc "Default Task"
-task :default => [ :fresh_rails ]
 
 desc "Generates a fresh Rails package with documentation"
 task :fresh_rails => [ :clean, :make_dir_structure, :initialize_file_stubs, :copy_vendor_libraries, :copy_ties_content, :generate_documentation ]
